found small typo in erb file. still presents issues on /projects/:id

--- a/views/project.erb
+++ b/views/project.erb
@@ -14,7 +14,7 @@
 
 <h4>Add Volunteers</h4>
 
-<form action="/projects/<% @project.id %>/volunteers" method="post">
+<form action="/projects/<%= @project.id %>/volunteers" method="post">
   <div class="form-group">
     <label for="volunteer_name">Volunteer's name</label>
     <input type="text" name="song_name">
