--- a/views/edit_project.erb
+++ b/views/edit_project.erb
@@ -12,12 +12,18 @@
     <p>There are no volunteers listed for this project yet.</p>
   <% end %>
 
-<h4>Add a volunteer:</h4>
+  <form action="/projects/<%= @project.id %>" method="post">
+    <input name="_method" type="hidden" value="patch">
 
-<form action="/projects/<%= @project.id %>/volunteers" method="post">
-  <div class="form-group">
-    <label for="volunteer_name">Volunteer name</label>
-    <input id="volunteer_name" name="volunteer_name" class="form-control" type="text">
-  </div>
-  <button type="submit" class="btn">Add volunteer</button>
-</form>
+    <label for="name">Rename project</label>
+    <input id="name" name="name" type="text">
+
+    <button type="submit">Update</button>
+  </form>
+
+  <form action="/projects/<%= @project.id %>" method="post">
+    <input name="_method" type="hidden" value="delete">
+
+    <button type="submit">Delete project</button>
+  </form>
+  <p><a href="/projects">Return to project list</a></p>
