--- a/views/project.erb
+++ b/views/project.erb
@@ -17,7 +17,7 @@
 <form action="/projects/<%= @project.id %>/volunteers" method="post">
   <div class="form-group">
     <label for="volunteer_name">Volunteer's name</label>
-    <input type="text" name="song_name">
+    <input id="volunteer_name" name="volunteer_name" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Add Volunteer</button>
 
