--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -3,7 +3,7 @@
 <form action="/projects" method="post">
   <div class="form-group">
     <label for="project_name">Project name</label>
-    <input id="n" name="project_name" class="form-control" type="text">
+    <input id="name" name="project_name" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Add project</button>
 </form>
