added readme sentence

--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -15,5 +15,5 @@
 
   <button type="submit">Delete volunteer</button>
 </form>
-
+<!-- this below doesnt work-->
 <a href="/projects/<%= @volunteer.project.id %>">Back to <%= @volunteer.project.name %></a>
